# lego_ri_ros

./: README.md
lego_spike_description/: CMakeLists.txt  README.md  package.xml
lego_spike_description/config/: lego.rviz
lego_spike_description/launch/: description.launch
lego_spike_description/meshes/: SpikePrimeColorSensor.dae  SpikePrimeColorSensor.stl  SpikePrimeDistanceSensor.dae  SpikePrimeDistanceSensor.stl  SpikePrimeForceSensor.dae  SpikePrimeForceSensor.stl  SpikePrimeHub.dae  SpikePrimeHub.stl  SpikePrimeLargeMotor.dae  SpikePrimeLargeMotor.stl  SpikePrimeMotor.dae  SpikePrimeMotor.stl  mobile_fingers.dae  mobile_fingers.stl  static_finger.dae  static_finger.stl  yaw_brace.dae  yaw_brace.stl
lego_spike_description/urdf/: basic_lego_robot.urdf.xacro  extras.urdf.xacro  lego_arm.urdf.xacro  lego_base_plate.urdf.xacro  lego_color_sensor.urdf.xacro  lego_dimensions.urdf.xacro  lego_distance_sensor.urdf.xacro  lego_force_sensor.urdf.xacro  lego_hub.urdf.xacro  lego_large_motor.urdf.xacro  lego_materials.urdf.xacro  lego_motor.urdf.xacro  lego_robot.urdf.xacro  lego_small_motor.urdf.xacro  simple_arm.urdf.xacro
lego_spike_description/urdf/configs/: arm  basic
lego_spike_interface/: CMakeLists.txt  README.md  package.xml  setup.py
lego_spike_interface/debian/: udev
lego_spike_interface/launch/: serial_interface.launch
lego_spike_interface/mindstorms/: main.py
lego_spike_interface/scripts/: serial_interface
lego_spike_interface/src/lego_spike_interface/: SerialInterface.py  command.py  interfaces.py  serial_interface_node.py
lego_spike_msgs/: CMakeLists.txt  README.md  package.xml
lego_spike_msgs/msg/: Color.msg  ColorSensors.msg  DistanceSensors.msg  LightPattern.msg  MotorCfg.msg
lego_spike_viz/: CMakeLists.txt  README.md  package.xml
lego_spike_viz/launch/: view_model.launch  view_robot.launch
simple_arm_moveit/: .setup_assistant  CMakeLists.txt  README.md  package.xml
simple_arm_moveit/config/: fake_controllers.yaml  joint_limits.yaml  lego_arm.srdf  ompl_planning.yaml  ros_controllers.yaml
simple_arm_moveit/launch/: chomp_planning_pipeline.launch.xml  default_warehouse_db.launch  demo.launch  demo_gazebo.launch  fake_moveit_controller_manager.launch.xml  gazebo.launch  lego_arm_moveit_controller_manager.launch.xml  move_group.launch  ompl_planning_pipeline.launch.xml  planning_context.launch  planning_pipeline.launch.xml  ros_controllers.launch  run_benchmark_ompl.launch  sensor_manager.launch.xml  setup_assistant.launch  simple_arm.launch  trajectory_execution.launch.xml  warehouse.launch
simple_arm_moveit/scripts/: simple_arm_moveit_controller
