<?xml version="1.0"?>
<package format="3">
  <name>lego_spike_description</name>
  <version>0.0.0</version>
  <description>URDF macros and meshes for Lego Spike and Lego Mindstorms Robot Inventor parts</description>

  <maintainer email="civerachb@clearpathrobotics.com">Chris Iverach-Brereton</maintainer>

  <license>BSD</license>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <depend>urdf</depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
