<?xml version="1.0"?>
<package format="2">
  <name>lego_spike_interface</name>
  <version>0.0.0</version>
  <description>Serial-based interface for communicating with the Lego Mindstorms RI + Lego Spike Prime hub</description>

  <maintainer email="civerachb@clearpathrobotics.com">Chris Iverach-Brereton</maintainer>

  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>
  <depend>rospy</depend>

  <export>
  </export>
</package>
