<?xml version="1.0"?>
<package format="2">
  <name>lego_spike_msgs</name>
  <version>0.0.0</version>
  <description>ROS messages used with the Lego Spike and Lego Mindstorms hub</description>

  <maintainer email="civerachb@clearpathrobotics.com">Chris Iverach-Brereton</maintainer>

  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>

  <depend>rospy</depend>
  <depend>std_msgs</depend>

  <exec_depend>message_runtime</exec_depend>

  <export>
  </export>
</package>
