<?xml version="1.0"?>
<package format="2">
  <name>lego_spike_viz</name>
  <version>0.0.0</version>
  <description>Rviz configuration and launch files for viewing Lego Mindstorms and Lego Spike Prime robots</description>

  <maintainer email="civerachb@clearpathrobotics.com">Chris Iverach-Brereton</maintainer>

  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>

  <depend>joint_state_publisher_gui</depend>
  <depend>lego_spike_description</depend>
  <depend>lego_spike_msgs</depend>
  <depend>rviz</depend>
  <depend>xacro</depend>

  <export>
  </export>
</package>
